# tinfoil

./: .gitignore  .gitmodules  README.md  REVIEWERS  Setup.hs  ambiata-tinfoil.cabal  ambiata-tinfoil.lock-7.10.2  ambiata-tinfoil.lock-7.8.4  ambiata-tinfoil.lock-8.0.1  boris-git.toml  boris.toml  mafia  master.toml  project.cabal  tinfoil.cabal  tinfoil.lock-7.10.2  tinfoil.lock-7.8.4
cbits/: config.h
cbits/scrypt/: README.md
cbits/tinfoil/: memory.c  memory.h  tinfoil.h
cbits/tinfoil/sodium/: constants.c  constants.h
doc/: request-signing.md
lib/libsodium/: .gitignore  Makefile.in
src/: Tinfoil.hs
src/Tinfoil/: Comparison.hs  Data.hs  Digest.hs  Encode.hs  Hash.hs  KDF.hs  Key.hs  MAC.hs  Random.hs  Signing.hs  Token.hs
src/Tinfoil/AEAD/AESGCM/: Constraints.hs  Data.hs  Error.hs  Foreign.hs  Iv.hs
src/Tinfoil/Data/: Hash.hs  KDF.hs  Key.hs  MAC.hs  Random.hs  Signing.hs  Token.hs  Verify.hs
src/Tinfoil/Internal/: Sodium.hs
src/Tinfoil/Internal/Sodium/: Data.hs  Foreign.hs
src/Tinfoil/KDF/: Common.hs  Scrypt.hs
src/Tinfoil/KDF/Scrypt/: Internal.hs
src/Tinfoil/Random/: Internal.hs
src/Tinfoil/Signing/: Ed25519.hs
src/Tinfoil/Signing/Ed25519/: Internal.hs
test/: ambiata-tinfoil-test.cabal  bench.hs  test-io.hs  test-random.hs  test.hs
test/Test/IO/: Tinfoil.hs
test/Test/IO/Tinfoil/: Comparison.hs  Hash.hs  KDF.hs  MAC.hs  Random.hs  Signing.hs
test/Test/IO/Tinfoil/AEAD/AESGCM/: Foreign.hs  Iv.hs
test/Test/IO/Tinfoil/Comparison/: Laws.hs
test/Test/IO/Tinfoil/Data/: MAC.hs
test/Test/IO/Tinfoil/Internal/: Sodium.hs
test/Test/IO/Tinfoil/Internal/Sodium/: Foreign.hs
test/Test/IO/Tinfoil/KDF/: Common.hs  Scrypt.hs
test/Test/IO/Tinfoil/KDF/Scrypt/: Compat.hs
test/Test/IO/Tinfoil/Signing/: Ed25519.hs
test/Test/IO/Tinfoil/Signing/Ed25519/: Internal.hs
test/Test/Tinfoil/: Arbitrary.hs  Encode.hs  Gen.hs  Hash.hs  MAC.hs  Random.hs
test/Test/Tinfoil/AEAD/AESGCM/: Data.hs  Iv.hs
test/Test/Tinfoil/Data/: Hash.hs  KDF.hs  Key.hs  MAC.hs  Signing.hs
test/Test/Tinfoil/Hash/: TestVectors.hs
test/Test/Tinfoil/KDF/: Scrypt.hs
test/Test/Tinfoil/KDF/Scrypt/: TestVectors.hs
test/Test/Tinfoil/Signing/Ed25519/: Internal.hs
tinfoil-core/: ambiata-tinfoil-core.cabal  ambiata-tinfoil-core.lock-7.10.2
tinfoil-core/cbits/tinfoil/: memory.h  tinfoil.h
tinfoil-core/src/: Tinfoil.hs
tinfoil-core/src/Tinfoil/Core/: Comparison.hs  Data.hs  Encode.hs  Hash.hs  KDF.hs  Key.hs  MAC.hs  Random.hs  Token.hs
tinfoil-core/src/Tinfoil/Core/Data/: Hash.hs  KDF.hs  Key.hs  MAC.hs  Random.hs  Signing.hs  Token.hs  Verify.hs
tinfoil-core/src/Tinfoil/Core/KDF/: Scrypt.hs
tinfoil-core/src/Tinfoil/Core/KDF/Scrypt/: Internal.hs
tinfoil-core/src/Tinfoil/Core/Random/: Internal.hs
tinfoil-core/src/Tinfoil/Core/Signing/: Ed25519.hs
tinfoil-core/src/Tinfoil/Core/Signing/Ed25519/: Internal.hs
tinfoil-core/test/: ambiata-tinfoil-core-test.cabal  ambiata-tinfoil-core-test.lock-7.10.2  ambiata-tinfoil-core-test.lock-8.0.1  bench.hs  test-io.hs  test-random.hs  test.hs
tinfoil-core/test/Test/IO/Tinfoil/: Core.hs
tinfoil-core/test/Test/IO/Tinfoil/Core/: Comparison.hs  Hash.hs  KDF.hs  MAC.hs  Random.hs  Signing.hs
tinfoil-core/test/Test/IO/Tinfoil/Core/Comparison/: Laws.hs
tinfoil-core/test/Test/IO/Tinfoil/Core/Data/: MAC.hs
tinfoil-core/test/Test/IO/Tinfoil/Core/KDF/: Scrypt.hs
tinfoil-core/test/Test/IO/Tinfoil/Core/KDF/Scrypt/: Compat.hs
tinfoil-core/test/Test/IO/Tinfoil/Core/Signing/: Ed25519.hs
tinfoil-core/test/Test/IO/Tinfoil/Core/Signing/Ed25519/: Internal.hs
tinfoil-core/test/Test/Tinfoil/Core/: Arbitrary.hs  Encode.hs  Gen.hs  Hash.hs  MAC.hs  Random.hs
tinfoil-core/test/Test/Tinfoil/Core/Data/: Hash.hs  KDF.hs  Key.hs  MAC.hs  Signing.hs
tinfoil-core/test/Test/Tinfoil/Core/Hash/: TestVectors.hs
tinfoil-core/test/Test/Tinfoil/Core/KDF/: Scrypt.hs
tinfoil-core/test/Test/Tinfoil/Core/KDF/Scrypt/: TestVectors.hs
tinfoil-core/test/Test/Tinfoil/Core/Signing/Ed25519/: Internal.hs
tinfoil-sign/: ambiata-tinfoil-sign.cabal  master.toml
tinfoil-sign/bench/: bench.hs
tinfoil-sign/cbits/tinfoil/: tinfoil.h
tinfoil-sign/cbits/tinfoil/sodium/: constants.h
tinfoil-sign/src/Tinfoil/Sign/: Data.hs  Ed25519.hs
tinfoil-sign/src/Tinfoil/Sign/Ed25519/: Internal.hs
tinfoil-sign/test/: test-io.hs  test.hs
tinfoil-sign/test/Test/IO/Tinfoil/Sign/: Ed25519.hs
tinfoil-sign/test/Test/IO/Tinfoil/Sign/Ed25519/: Internal.hs
tinfoil-sign/test/Test/Tinfoil/Sign/: Arbitrary.hs  Data.hs
tinfoil-sign/test/Test/Tinfoil/Sign/Ed25519/: Internal.hs
