name:                  ambiata-tinfoil
version:               0.0.1
license:               Apache-2.0
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2015 Ambiata.
synopsis:              Paranoid crypto primitives
category:              System
cabal-version:         >= 1.8
build-type:            Custom
description:           Primitives for cryptographic random number generation,
                       key deriviation, credential storage and verification,
                       et cetera.

library
  build-depends:
                       base                            >= 3          && < 5
                     , ambiata-p
                     , ambiata-x-eithert
                     , base16-bytestring               == 0.1.1.*
                     , base64-bytestring               == 1.0.0.*
                     , binary                          >= 0.5 &&     < 0.9
                     , bytestring                      >= 0.10.4     && < 0.11
                     , cryptonite                      >= 0.15 &&    < 0.21
                     , deepseq-generics                == 0.2.0.*
                     , entropy                         == 0.3.7
                     , memory                          >= 0.11       && < 0.14
                     , semigroups                      >= 0.16       && < 0.19
                     , text                            == 1.2.*
                     , transformers                    >= 0.3        && < 0.6

  ghc-options:
                       -Wall

  hs-source-dirs:
                       src

  exposed-modules:
                       Paths_ambiata_tinfoil
                       Tinfoil
                       Tinfoil.AEAD.AESGCM.Constraints
                       Tinfoil.Comparison
                       Tinfoil.Data
                       Tinfoil.Data.Hash
                       Tinfoil.Data.KDF
                       Tinfoil.Data.Key
                       Tinfoil.Data.MAC
                       Tinfoil.Data.Random
                       Tinfoil.Data.Signing
                       Tinfoil.Data.Token
                       Tinfoil.Data.Verify
                       Tinfoil.Encode
                       Tinfoil.Hash
                       Tinfoil.Internal.Sodium
                       Tinfoil.Internal.Sodium.Data
                       Tinfoil.Internal.Sodium.Foreign
                       Tinfoil.KDF
                       Tinfoil.KDF.Scrypt
                       Tinfoil.KDF.Scrypt.Internal
                       Tinfoil.Key
                       Tinfoil.MAC
                       Tinfoil.Random
                       Tinfoil.Random.Internal
                       Tinfoil.Signing.Ed25519
                       Tinfoil.Signing.Ed25519.Internal
                       Tinfoil.Token

  c-sources:
                       -- tinfoil's own c bits
                       cbits/tinfoil/memory.c
                       cbits/tinfoil/sodium/constants.c

                       -- scrypt (https://github.com/Tarsnap/scrypt)
                     , cbits/scrypt/insecure_memzero.c
                     , cbits/scrypt/sha256.c
                     , cbits/scrypt/warnp.c
                     , cbits/scrypt/cpusupport_x86_aesni.c
                     , cbits/scrypt/cpusupport_x86_sse2.c
                     , cbits/scrypt/crypto_scrypt_smix.c
                     , cbits/scrypt/crypto_scrypt_smix_sse2.c
                     , cbits/scrypt/crypto_scrypt.c

  cc-options:
                       -- x86 extensions
                       -msse3

                       -- Warnings.
                       -Waggregate-return
                       -Wall
                       -Wbad-function-cast
                       -Wcast-align
                       -Wcast-qual
                       -Wextra
                       -Winit-self
                       -Wmissing-prototypes
                       -Wpointer-arith
                       -Wshadow
                       -Wstrict-prototypes
                       -Wundef
                       -Wvla
                       -Wwrite-strings

  include-dirs:        cbits/scrypt
                     , cbits/tinfoil
                     , gen/libsodium/include

  includes:            crypto_scrypt.h
                     , tinfoil.h
                     , sodium.h

  install-includes:    crypto_scrypt.h
                     , tinfoil.h

test-suite test
  type:                exitcode-stdio-1.0

  main-is:             test.hs

  ghc-options:         -Wall -threaded -O2 -pgml ./bin/salted-gcc

  hs-source-dirs:
                       test

  build-depends:
                       base                            >= 3          && < 5
                     , ambiata-tinfoil
                     , ambiata-disorder-core
                     , ambiata-disorder-corpus
                     , ambiata-p
                     , bytestring                      >= 0.10.4     && < 0.11
                     , QuickCheck                      >= 2.7        && < 2.9
                     , quickcheck-instances            == 0.3.*
                     , quickcheck-text                 == 0.1.*
                     , semigroups
                     , text                            == 1.2.*

test-suite test-io
  type:                exitcode-stdio-1.0

  main-is:             test-io.hs

  ghc-options:         -Wall -threaded -O2 -pgml ./bin/salted-gcc

  hs-source-dirs:
                       test

  build-depends:
                       base                            >= 3          && < 5
                     , ambiata-tinfoil
                     , ambiata-disorder-core
                     , ambiata-disorder-corpus
                     , ambiata-p
                     , ambiata-x-eithert
                     , bytestring                      >= 0.10.4     && < 0.11
                     , QuickCheck                      >= 2.7 &&     < 2.9
                     , quickcheck-instances            == 0.3.*
                     , quickcheck-text                 == 0.1.*
                     , process                         >= 1.2        && < 1.5
                     , semigroups
                     , temporary                       == 1.2.0.*
                     , text                            == 1.2.*

test-suite test-random
  type:                exitcode-stdio-1.0

  main-is:             test-random.hs

  ghc-options:         -Wall -threaded -O2

  hs-source-dirs:
                       test

  build-depends:
                       base                            >= 3          && < 5
                     , ambiata-tinfoil
                     , ambiata-p
                     , bytestring                      >= 0.10.4     && < 0.11
                     , QuickCheck                      >= 2.7 &&     < 2.9
                     , quickcheck-instances            == 0.3.*
                     , semigroups
                     , statistics                      == 0.13.2.*
                     , text
                     , vector                          == 0.11.*

benchmark bench
  type:                exitcode-stdio-1.0

  main-is:             bench.hs

  ghc-options:         -Wall -threaded -O2 -pgml ./bin/salted-gcc

  hs-source-dirs:
                       test

  build-depends:
                       base                            >= 3          && < 5
                     , QuickCheck                      >= 2.7 &&     < 2.9
                     , ambiata-disorder-core
                     , ambiata-disorder-corpus
                     , ambiata-p
                     , ambiata-tinfoil
                     , bytestring                      >= 0.10.4     && < 0.11
                     , criterion                       == 1.1.*
                     , quickcheck-instances            == 0.3.*
                     , quickcheck-text                 == 0.1.*
                     , random                          == 1.1.*
                     , semigroups
                     , text                            == 1.2.*
