name:                  ambiata-project
version:               0.0.1
license:               AllRightsReserved
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2015 Ambiata.
synopsis:              ambiata-project
category:              System
cabal-version:         >= 1.8
build-type:            Simple
description:           ambiata-project

library
  build-depends:
                       base                            >= 3          && < 5
                     , transformers                    >= 0.3        && < 0.5
                     , either                          >= 4.3        && < 4.5
                     , ambiata-p

  ghc-options:
                       -Wall

  hs-source-dirs:
                       src

  exposed-modules:
                       Paths_ambiata_project
                       Project

test-suite test
  type:                exitcode-stdio-1.0

  main-is:             test.hs

  ghc-options:         -Wall -threaded -O2

  hs-source-dirs:
                       test

  build-depends:
                       base                            >= 3          && < 5
                     , ambiata-project
                     , ambiata-disorder-core
                     , ambiata-disorder-corpus
                     , ambiata-p
                     , QuickCheck                      == 2.7.*
                     , quickcheck-instances            == 0.3.*
