name:                  ambiata-tinfoil
version:               0.0.1
license:               AllRightsReserved
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2015 Ambiata.
synopsis:              ambiata-tinfoil
category:              System
cabal-version:         >= 1.8
build-type:            Simple
description:           ambiata-tinfoil

library
  build-depends:
                       base                            >= 3          && < 5
                     , ambiata-p
                     , base64-bytestring               == 1.0.0.*
                     , bytestring                      == 0.10.4.0
                     , deepseq                         == 1.3.*
                     , either                          >= 4.3        && < 4.5
                     , entropy                         == 0.3.7
                     , semigroups                      == 0.16.*
                     , text                            == 1.2.*
                     , transformers                    >= 0.3        && < 0.5

  ghc-options:
                       -Wall

  hs-source-dirs:
                       src

  exposed-modules:
                       Paths_ambiata_tinfoil
                       Tinfoil
                       Tinfoil.Data
                       Tinfoil.KDF
                       Tinfoil.KDF.Scrypt
                       Tinfoil.KDF.Scrypt.Internal
                       Tinfoil.Random
                       Tinfoil.Random.Internal

  c-sources:           cbits/crypto_scrypt-sse.c, cbits/sha256.c
  cc-options:          -msse2
  include-dirs:        cbits
  includes:            crypto_scrypt.h
  install-includes:    crypto_scrypt.h

test-suite test
  type:                exitcode-stdio-1.0

  main-is:             test.hs

  ghc-options:         -Wall -threaded -O2

  hs-source-dirs:
                       test

  build-depends:
                       base                            >= 3          && < 5
                     , ambiata-tinfoil
                     , ambiata-disorder-core
                     , ambiata-disorder-corpus
                     , ambiata-p
                     , bytestring                      == 0.10.4.0
                     , QuickCheck                      == 2.7.*
                     , quickcheck-instances            == 0.3.*
                     , quickcheck-text                 == 0.1.*
                     , semigroups
                     , text                            == 1.2.*

test-suite test-io
  type:                exitcode-stdio-1.0

  main-is:             test-io.hs

  ghc-options:         -Wall -threaded -O2

  hs-source-dirs:
                       test

  build-depends:
                       base                            >= 3          && < 5
                     , ambiata-tinfoil
                     , ambiata-disorder-core
                     , ambiata-disorder-corpus
                     , ambiata-p
                     , bytestring                      == 0.10.4.0
                     , QuickCheck                      == 2.7.*
                     , quickcheck-instances            == 0.3.*
                     , quickcheck-text                 == 0.1.*
                     , semigroups
                     , text                            == 1.2.*

test-suite test-random
  type:                exitcode-stdio-1.0

  main-is:             test-random.hs

  ghc-options:         -Wall -threaded -O2

  hs-source-dirs:
                       test

  build-depends:
                       base                            >= 3          && < 5
                     , ambiata-tinfoil
                     , ambiata-p
                     , bytestring                      == 0.10.4.0
                     , QuickCheck                      == 2.7.*
                     , quickcheck-instances            == 0.3.*
                     , semigroups
                     , statistics                      == 0.13.2.*
                     , text
                     , vector                          == 0.11.*

benchmark bench
  type:                exitcode-stdio-1.0

  main-is:             bench.hs

  ghc-options:         -Wall -threaded -O2

  hs-source-dirs:
                       test

  build-depends:
                       base                            >= 3          && < 5
                     , QuickCheck                      == 2.7.*
                     , ambiata-disorder-core
                     , ambiata-disorder-corpus
                     , ambiata-p
                     , ambiata-tinfoil
                     , bytestring                      == 0.10.4.0
                     , criterion                       == 1.1.*
                     , old-locale                      == 1.0.0.*
                     , quickcheck-instances            == 0.3.*
                     , quickcheck-text                 == 0.1.*
                     , semigroups
                     , text                            == 1.2.*
                     , time                            == 1.4.2.*



