name:                  ambiata-tinfoil-test
version:               0.0.1
cabal-version:         >= 1.8
build-type:            Simple

library
  build-depends:
                       base                            >= 3          && < 5
                     , ambiata-tinfoil
                     , ambiata-disorder-core
                     , ambiata-disorder-corpus
                     , ambiata-p
                     , bytestring                      >= 0.10.4     && < 0.11
                     , QuickCheck                      >= 2.7        && < 2.9
                     , quickcheck-instances            == 0.3.*
                     , quickcheck-text                 == 0.1.*
                     , semigroups
                     , text                            == 1.2.*

  exposed-modules:
                       Test.Tinfoil.Arbitrary
