name:                  ambiata-tinfoil-sign
version:               0.0.1
license:               Apache-2.0
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2015 Ambiata.
synopsis:              ambiata-tinfoil-sign
category:              System
cabal-version:         >= 1.8
build-type:            Simple

library
  build-depends:
                       base                            >= 3          && < 5
                     , ambiata-p
                     , ambiata-tinfoil-core
                     , base16-bytestring               == 0.1.1.*
                     , base64-bytestring               == 1.0.0.*
                     , binary                          >= 0.5 &&     < 0.9
                     , bytestring                      >= 0.10.4     && < 0.11
                     , deepseq-generics                == 0.2.0.*
                     , semigroups                      >= 0.16       && < 0.19
                     , text                            == 1.2.*
                     , transformers                    >= 0.3        && < 0.6

  ghc-options:
                       -Wall

  hs-source-dirs:
                       src

  exposed-modules:
                       Tinfoil.Sign.Data
                       Tinfoil.Sign.Ed25519
                       Tinfoil.Sign.Ed25519.Internal

  extra-libraries:     sodium

  pkgconfig-depends:   libsodium >= 0.4.5

  c-sources:
                       cbits/tinfoil/sodium/constants.c

  cc-options:          -msse2
  include-dirs:        cbits/tinfoil
  includes:            tinfoil.h
  install-includes:    tinfoil.h

test-suite test
  type:                exitcode-stdio-1.0

  main-is:             test.hs

  ghc-options:         -Wall -threaded -O2

  hs-source-dirs:
                       test

  build-depends:
                       base                            >= 3          && < 5
                     , ambiata-tinfoil-core
                     , ambiata-tinfoil-core-test
                     , ambiata-tinfoil-sign
                     , ambiata-disorder-core
                     , ambiata-disorder-corpus
                     , ambiata-p
                     , bytestring                      >= 0.10.4     && < 0.11
                     , QuickCheck                      >= 2.7        && < 2.9
                     , quickcheck-instances            == 0.3.*
                     , quickcheck-text                 == 0.1.*
                     , semigroups
                     , text                            == 1.2.*

test-suite test-io
  type:                exitcode-stdio-1.0

  main-is:             test-io.hs

  ghc-options:         -Wall -threaded -O2

  hs-source-dirs:
                       test

  build-depends:
                       base                            >= 3          && < 5
                     , ambiata-tinfoil-core
                     , ambiata-tinfoil-core-test
                     , ambiata-tinfoil-sign
                     , ambiata-disorder-core
                     , ambiata-disorder-corpus
                     , ambiata-p
                     , bytestring                      >= 0.10.4     && < 0.11
                     , QuickCheck                      >= 2.7 &&     < 2.9
                     , quickcheck-instances            == 0.3.*
                     , quickcheck-text                 == 0.1.*
                     , process                         >= 1.2        && < 1.5
                     , semigroups
                     , temporary                       == 1.2.0.*
                     , text                            == 1.2.*

benchmark bench
  type:                exitcode-stdio-1.0

  main-is:             bench.hs

  ghc-options:         -Wall -threaded -O2

  hs-source-dirs:
                       bench

  build-depends:
                       base                            >= 3          && < 5
                     , QuickCheck                      >= 2.7 &&     < 2.9
                     , ambiata-disorder-core
                     , ambiata-disorder-corpus
                     , ambiata-p
                     , ambiata-tinfoil-core
                     , ambiata-tinfoil-core-test
                     , ambiata-tinfoil-sign
                     , bytestring                      >= 0.10.4     && < 0.11
                     , criterion                       == 1.1.*
                     , quickcheck-instances            == 0.3.*
                     , quickcheck-text                 == 0.1.*
                     , random                          == 1.1.*
                     , semigroups
                     , text                            == 1.2.*
